Completed Basic Personal Webpage

--- a/18BIT0015_Portfolio/index.html
+++ b/18BIT0015_Portfolio/index.html
@@ -57,8 +57,118 @@
         </div>
       </div>
   </div>
-  </header>
+  </header><!-- end of Header -->
+  <!-- start Section About -->
+  <section class="section" id="About"> 
+   <!-- container  -->
+    <div class="container">
+        <!-- heading -->
+        <h1 class="title-Section text-center text-capitalize m-3">about me
+        </h1>
+        <div class="center-line"></div>
+            <!-- the row  -->
+            <div class="row mt-5">
+              <!-- my Image-->
+              <div class="col-lg-6 mt-5 text-center" data-aos="fade-right">
+                <img src="img/slife.png" alt="sandeep" class="picOfMe">
+              </div>
+              <!-- contacts  data-aos="fade-left"-->
+              <div class="col-lg-6 mt-5 aboutrightside" >
+                    <h3 class="mt-1 title">MVS Sandeep</h3>
+                    <h5 class="mt-3 mb-5"> Professional youtuber and content creator </h5> 
+                    <p class="lead mb-5">
+                      Creative guy and an aspiring Entrepreneur. I’m working on myself in order to enhance my skills and develop my own business.Professional Youtuber with over 40000 subscribers.
+                    </p>
+                    <!-- list of contacts -->
+                    <ul class="list-unstyled">
+                      <li class="py-2 m-2">
+                        <span class="pr-3"><i class="fa fa-map-marker fa-2x"></i> </span> <span class="pr-3 lead"> Tirupati , India </span>
+                      </li>
+                      <li class="py-2 m-2">
+                        <span class="pr-3"><i class="fa fa-envelope fa-2x"></i>  </span><span class="pr-3 lead"><a href="mailto:turbanteddybusiness@gmail.com"> turbanteddybusiness@gmail.com </a> </span>
+                      </li>
+                      <li class="py-2 m-2">
+                        <span class="pr-3"><i class="fa fa-phone fa-2x"></i> </span> <span class="pr-3 lead"><a href="Contact : 9100762541">9100762541 </a> </span>
+                      </li>
+                      <li class="py-2 m-2">
+                          <a class="pr-4" href="https://github.com/18BIT0015"><i class="fa fa-github fa-2x"></i></a>
+                          <a class="pr-4" href="https://www.youtube.com/channel/UCgwCI15HG96WThHqHZi880Q"><i class="fa fa-youtube fa-2x"></i></a>
+                          <a class="pr-4" href="https://www.instagram.com/coolsandboy/"><i class="fa fa-instagram fa-2x"></i></a>
+                      </li>
+                    </ul> 
+              </div>
+            </div>
+      </div> 
+  </section>
+ 
+  <section  class="section" id="Skills">
+   <div class="skills-bar" >
 
+      <h1 class="title-Section text-center text-capitalize m-3">my skills</h1>
+      <div class="center-line"></div>
+  
+     <div class="bar">
+       <div class="info">
+         <span>FrontEnd Develpment</span>
+       </div>
+       <div class="progress-line html"><span></span></div>
+     </div>
+     <div class="bar">
+       <div class="info">
+         <span>HTML</span>
+       </div>
+       <div class="progress-line css"><span></span></div>
+     </div>
+     <div class="bar">
+       <div class="info">
+         <span>CSS</span>
+       </div>
+       <div class="progress-line javascript"><span></span></div>
+     </div>
+     <div class="bar">
+       <div class="info">
+         <span>Photoshop</span>
+       </div>
+       <div class="progress-line jquery"><span></span></div>
+     </div>
+     <div class="bar">
+       <div class="info">
+         <span>Video Editing</span>
+       </div>
+       <div class="progress-line bootstrap"><span></span></div>
+     </div>
+   </div>
+  </section>
+
+ 
+
+   <section id="Contact" class="section">
+
+    <h1 class="title-Section text-center text-capitalize m-3">Contact Me!</h1>
+    <div class="center-line "></div>
+
+    <div class="container  d-flex flex-column justify-content-center" >
+    <form class="form mb-5">
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Your Name</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Please Enter Your Name ">
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlInput2">Your Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlInput3">Your WhatsApp Number</label>
+        <input type="email" class="form-control" id="exampleFormControlInput3" placeholder="+91 1234567890">
+      </div>
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Enter You Message</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="8" placeholder="Type Your Messsage Here"></textarea>
+      </div>
+      <button type="submit" class="myBtn btn btn-primary px-5">Submit</button>
+    </form>
+   </div>
+   </section>
 
 
           <script src="js/jquery3.5.1.js"></script>
